Sat Apr 25 16:19:48 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (month_arg): extracted from time_arg.
	  (validate_vtm): ditto.

Sat Apr 25 16:03:21 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (TIME_COPY_GMT): new macro.
	  (time_s_at): use TIME_COPY_GMT.
	  (time_succ): ditto.

Sat Apr 25 15:54:04 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_mload): use TIME_SET_UTC.

Sat Apr 25 15:47:54 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_get_tm): take time_object instead of gmt.

Sat Apr 25 15:39:44 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_succ): refactored to avoid gmt variable.
	  (strftimev): use TIME_UTC_P.
	  (time_strftime): ditto.

Sat Apr 25 15:21:33 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (TIME_UTC_P): new macro.
	  (TIME_SET_UTC): ditto.
	  (TIME_LOCALTIME_P): ditto.
	  (TIME_SET_LOCALTIME): ditto.
	  (time_utc_p): use the above macro.
	  (time_localtime): ditto.
	  (time_localtime): ditto.
	  (time_gmtime): ditto.
	  (time_to_s): ditto.
	  (time_add): ditto.
	  (time_sec): ditto.
	  (time_min): ditto.
	  (time_hour): ditto.
	  (time_mday): ditto.
	  (time_mon): ditto.
	  (time_year): ditto.
	  (time_wday): ditto.
	  (wday_p): ditto.
	  (time_yday): ditto.
	  (time_isdst): ditto.
	  (time_zone): ditto.
	  (time_utc_offset): ditto.
	  (time_to_a): ditto.
	  (strftimev): ditto.
	  (time_strftime): ditto.
	  (time_mdump): ditto.

Thu Apr 23 01:30:37 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/zlib/zlib.c (Zlib::GzipFile#path): New method.

Wed Apr 22 20:25:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_timespec): check out-of-range.  [ruby-core:23282]
	  [Bug #1396]

Wed Apr 22 19:33:13 2009  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.parse): use year completion in Date._parse.

Wed Apr 22 11:12:15 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (GMTIME, LOCALTIME): should set result if not have *_r().

	* time.c (localtime_with_gmtoff): now always needed tmbuf.
